# monica

./: .gitmodules  README.md
BLE_uart/: BLE_uart.ino
Firmware/SourceCode/main/: CMakeLists.txt  idf_component.yml  monica.cpp  monica.h
Firmware/SourceCode/main/hal/: hal.cpp  hal.h  hal_config.h
Firmware/SourceCode/main/hal/arduino/: esp32-hal-ledc.c
Firmware/SourceCode/main/hal/disp/: hal_disp.hpp
Firmware/SourceCode/main/hal/lvgl/: hal_lvgl.cpp  hal_lvgl.hpp
Firmware/SourceCode/main/hal/power/: hal_power.hpp
Firmware/SourceCode/main/hal/rtc/: hal_rtc.hpp
Firmware/SourceCode/main/hal/sd_card/: hal_sd_card.hpp  hal_sd_crad.hpp
Firmware/SourceCode/main/hal/sensor/: bmp280.hpp
Firmware/SourceCode/main/hal/tp/: hal_tp.hpp
Firmware/SourceCode/main/hardware_manager/: hardware_manager.cpp  hardware_manager.h
Firmware/SourceCode/main/user_apps/: user_apps.h
Firmware/SourceCode/main/user_apps/black_watch_face/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  watch_face.cpp
Firmware/SourceCode/main/user_apps/black_watch_face/components/: ui_comp.c  ui_comp.h  ui_comp_batterygroup.c  ui_comp_batterygroup.h  ui_comp_buttondown.c  ui_comp_buttondown.h  ui_comp_buttonround.c  ui_comp_buttontop.c  ui_comp_buttontop.h  ui_comp_dailymissiongroup.c  ui_comp_dailymissiongroup.h  ui_comp_dategroup.c  ui_comp_forecastgroup.c  ui_comp_forecastgroup.h  ui_comp_hook.h  ui_comp_pulsegroup.c  ui_comp_stepgroup.c  ui_comp_titlegroup.c  ui_comp_todayweathergroup.c  ui_comp_weathergroup1.c
Firmware/SourceCode/main/user_apps/image_viewer/: image_viewer.cpp  image_viewer.h
(+314 files in other folders)
